# rag-content-example

./: .gitignore  README.md  __init__.py
hello/: __init__.py  hello.py  hello2.py  hello2_rhdh.py  pyproject.toml  rhdh.py  rhdh_topic_map.yaml
rhdh/: get_rhdh_plaintext_docs.sh  rhdh_attributes.yaml  rhdh_convert_it_all.py
