[tool.ruff]

# description of all rules are available on https://docs.astral.sh/ruff/rules/
lint.select = ["D", "E", "F", "W", "C", "S", "I", "TCH", "SLOT", "RUF", "C90", "N", "YTT", "ASYNC", "TRIO"]

# we need to check 'mood' of all docstrings, this needs to be enabled explicitly
lint.extend-select = ["D401"]

lint.ignore = []

target-version = "py311"
lint.pydocstyle.convention = "google"
line-length = 100

[tool.mypy]
disable_error_code = ["union-attr", "return-value", "arg-type", "import-untyped"]
ignore_missing_imports = true

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black==24.10.0",
    "mypy==1.12.0",
    "ruff==0.6.9",
    "types-requests==2.32.0.20240622",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "lightspeed-rhdh-docs-rag-util"
version = "0.1.0"
description = "RHDH Docs RAG utilities for RHDH LightSpeed."
authors = []
dependencies = [
    "requests==2.32.3",
    "PyYAML==6.0.1",
    "GitPython==3.1.44",
]
requires-python = "==3.11.*"
readme = "README.md"
